...
              final cart = CartProvider.of(context);
              cart.setShopProductQuantity(product, val);
              if (mounted) setState(() {});
              Navigator.pop(ctx);
            },
            style: ElevatedButton.styleFrom(backgroundColor: AppColors.emerald),
            child: Text('ОК', style: TextStyle(color: Colors.white)),
          ),
        ],
      ),
    );
  }

...
